--- a/route.html
+++ b/route.html
@@ -34,7 +34,7 @@
       </ul>
     </nav>
     <div class="content">
-      <h2 class="text">Welcome! This website will allow you to track routes, view stations, and see trains!</h2>
+      <h2 class="text">This will display all of the routes along with their corresponding stations that they travel through. The user can delete any route or add another route. Within each route, the user will also be able to add a station to the route or remove one.</h2>
     </div>
 		<!-- Your page content goes here. -->
   </body>
