--- a/train.html
+++ b/train.html
@@ -34,7 +34,7 @@
       </ul>
     </nav>
     <div class="content">
-      <h2 class="text">Welcome! This website will allow you to track routes, view stations, and see trains!</h2>
+      <h2 class="text">This will display all of the trains. Giving the option to delete any train or add one.</h2>
     </div>
 		<!-- Your page content goes here. -->
   </body>
