--- a/route.html
+++ b/route.html
@@ -33,9 +33,61 @@
 
       </ul>
     </nav>
-    <div class="content">
-      <h2 class="text">This will display all of the routes along with their corresponding stations that they travel through. The user can delete any route or add another route. Within each route, the user will also be able to add a station to the route or remove one.</h2>
-    </div>
+
+    <main id="route-container">
+
+    <section class="route-card">
+      <div class="route-number">
+        Route #1
+      </div>
+      <div id="card-container">
+        <div class="route-card">
+          <h2>1) Apolis</h2>
+        </div>
+        <div class="route-card">
+          <h2>1) Anaheim</h2>
+        </div>
+        <div class="route-card">
+          <h2>1) Winterholm</h2>
+        </div>
+      </div>
+    </section>
+
+    <section class="route-card">
+      <div class="route-number">
+        Route #2
+      </div>
+      <div id="card-container">
+        <div class="route-card">
+          <h2>1) Anaheim</h2>
+        </div>
+        <div class="route-card">
+          <h2>1) Marksville</h2>
+        </div>
+        <div class="route-card">
+          <h2>1) Winterholm</h2>
+        </div>
+      </div>
+    </section>
+
+    <section class="route-card">
+      <div class="route-number">
+        Route #3
+      </div>
+      <div id="card-container">
+        <div class="route-card">
+          <h2>1) Acletta</h2>
+        </div>
+        <div class="route-card">
+          <h2>1) Tailum</h2>
+        </div>
+        <div class="route-card">
+          <h2>1) Kaiser</h2>
+        </div>
+      </div>
+    </section>
+
+    </main>
 		<!-- Your page content goes here. -->
   </body>
 </html>
