--- a/train.html
+++ b/train.html
@@ -33,9 +33,95 @@
 
       </ul>
     </nav>
-    <div class="content">
-      <h2 class="text">This will display all of the trains. Giving the option to delete any train or add one.</h2>
-    </div>
+
+    <main id="card-container">
+
+      <section class="card">
+        <div class="train-number">
+          Train 1
+        </div>
+        <div class="train-route">
+          On Route: #2
+        </div>
+        <div class="train-model">
+          Model: Tier 5
+        </div>
+        <div class="train-price">
+          Price: $5235000
+        </div>
+        <div class="train-capacity">
+          Capacity: 250
+        </div>
+        <div class="train-conductor">
+          Conductor: John Doe
+        </div>
+      </section>
+
+      <section class="card">
+        <div class="train-number">
+          Train 2
+        </div>
+        <div class="train-route">
+          On Route: #3
+        </div>
+        <div class="train-model">
+          Model: Tier 6
+        </div>
+        <div class="train-price">
+          Price: $325000
+        </div>
+        <div class="train-capacity">
+          Capacity: 350
+        </div>
+        <div class="train-conductor">
+          Conductor: Lisa Thomas
+        </div>
+      </section>
+
+      <section class="card">
+        <div class="train-number">
+          Train 3
+        </div>
+        <div class="train-route">
+          On Route: #4
+        </div>
+        <div class="train-model">
+          Model: Tier 2
+        </div>
+        <div class="train-price">
+          Price: $150000
+        </div>
+        <div class="train-capacity">
+          Capacity: 200
+        </div>
+        <div class="train-conductor">
+          Conductor: Jeff Fisher
+        </div>
+      </section>
+
+      <section class="card">
+        <div class="train-number">
+          Train 1
+        </div>
+        <div class="train-route">
+          On Route: #5
+        </div>
+        <div class="train-model">
+          Model: Tier 3
+        </div>
+        <div class="train-price">
+          Price: $150000
+        </div>
+        <div class="train-capacity">
+          Capacity: 200
+        </div>
+        <div class="train-conductor">
+          Conductor: John Doe
+        </div>
+      </section>
+
+    </main>
+
 		<!-- Your page content goes here. -->
   </body>
 </html>
