--- a/station.html
+++ b/station.html
@@ -30,12 +30,79 @@
           <div class="l2"></div>
           <div class="l3"></div>
         </div>
-
       </ul>
     </nav>
-    <div class="content">
-      <h2 class="text">This will display the stations, giving the option to remove any station or add one.</h2>
-    </div>
+
+
+
+    <main id="card-container">
+
+      <section class="card">
+        <div class="station-number">
+          Station #1
+        </div>
+        <div class="station-name">
+          Name: Marksville
+        </div>
+        <div class="station-address">
+          Address: 1122 NE 100th Ave
+        </div>
+        <div class="station-state">
+          State: Oregon
+        </div>
+        <div class="station-city">
+          City: Portland
+        </div>
+        <div class="train-zipcode">
+          Zipcode: 97231
+        </div>
+      </section>
+
+      <section class="card">
+        <div class="station-number">
+          Station #2
+        </div>
+        <div class="station-number">
+          Name: Malito
+        </div>
+        <div class="station-address">
+          Address: 0000 NE 50th Ave
+        </div>
+        <div class="station-state">
+          State: California
+        </div>
+        <div class="station-city">
+          City: Los Angeles
+        </div>
+        <div class="train-zipcode">
+          Zipcode: 77210
+        </div>
+      </section>
+
+      <section class="card">
+        <div class="station-number">
+          Station #3
+        </div>
+        <div class="station-number">
+          Name: Apolis
+        </div>
+        <div class="station-address">
+          Address: 5566 NE 12th Ave
+        </div>
+        <div class="station-state">
+          State: Washington
+        </div>
+        <div class="station-city">
+          City: Seattle
+        </div>
+        <div class="train-zipcode">
+          Zipcode: 92311
+        </div>
+      </section>
+
+
+
+    </main>
 		<!-- Your page content goes here. -->
   </body>
 </html>
