--- a/home.html
+++ b/home.html
@@ -33,6 +33,9 @@
 
       </ul>
     </nav>
+    <div class="title-header">
+      <h4>Welcome! Learn more about Us!</h4>
+    </div>
     <div class="content">
       <h2 class="text">Welcome! This website will allow you to track routes, view stations, and see trains!</h2>
     </div>
