--- a/train.html
+++ b/train.html
@@ -34,6 +34,10 @@
       </ul>
     </nav>
 
+    <div class="title-header">
+      <h4>Trains</h4>
+    </div>
+
     <main id="card-container">
 
       <section class="card">
@@ -122,6 +126,33 @@
 
     </main>
 
-		<!-- Your page content goes here. -->
+    <form class="insert">
+      <div class="middle">
+        <h3>Insert Train</h3>
+      </div>
+      <div class="input-box">
+        <label>Assigned Route</label>
+        <input type="text" id="train-route">
+      </div>
+      <div class="input-box">
+        <label>Model</label>
+        <input type="text" id="train-model">
+      </div>
+      <div class="input-box">
+        <label>Price</label>
+        <input type="text" id="train-price">
+      </div>
+      <div class="input-box">
+        <label>Capacity</label>
+        <input type="text" id="train-capacity">
+      </div>
+      <div class="input-box">
+        <label>Conductor</label>
+        <input type="text" id="train-conductor">
+      </div>
+      <button class="button" id="submit-train">Submit</button>
+    </form>
+
+	
   </body>
 </html>
