--- a/station.html
+++ b/station.html
@@ -33,6 +33,10 @@
       </ul>
     </nav>
 
+    <div class="title-header">
+      <h4>Stations</h4>
+    </div>
+
 
 
     <main id="card-container">
@@ -100,6 +104,33 @@
         </div>
       </section>
 
+
+      <form class="insert">
+        <div class="middle">
+          <h3>Insert Station</h3>
+        </div>
+        <div class="input-box">
+          <label>Station Name</label>
+          <input type="text" id="station-name">
+        </div>
+        <div class="input-box">
+          <label>Address</label>
+          <input type="text" id="station-address">
+        </div>
+        <div class="input-box">
+          <label>State</label>
+          <input type="text" id="station-state">
+        </div>
+        <div class="input-box">
+          <label>City</label>
+          <input type="text" id="station-city">
+        </div>
+        <div class="input-box">
+          <label>Zipcode</label>
+          <input type="text" id="station-zipcode">
+        </div>
+        <button class="button" id="submit-station">Submit</button>
+      </form>
 
 
     </main>
