--- a/station.html
+++ b/station.html
@@ -5,6 +5,7 @@
     <title>AnyTrak</title>
     <link href="https://fonts.googleapis.com/css?family=Quicksand&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
+    <script src="index.js"></script>
   </head>
   <body>
     <nav class="header">
@@ -34,7 +35,8 @@
     </nav>
 
     <div class="title-header">
-      <h4>Stations</h4>
+      <h4 class="title-name">Stations</h4>
+      <button onclick="showmodal()" class="addbutton">Add Station</button>
     </div>
 
 
