--- a/route.html
+++ b/route.html
@@ -5,6 +5,7 @@
     <title>AnyTrak</title>
     <link href="https://fonts.googleapis.com/css?family=Quicksand&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
+    <script src="index.js"></script>
   </head>
   <body>
     <nav class="header">
@@ -35,7 +36,8 @@
     </nav>
 
     <div class="title-header">
-      <h4>Routes</h4>
+      <h4 class="title-name">Routes</h4>
+      <button onclick="showmodal()" class="addbutton">Add Route</button>
     </div>
 
     <main id="route-container">
