--- a/route.html
+++ b/route.html
@@ -46,15 +46,21 @@
       <div class="route-number">
         Route #1
       </div>
-      <div id="card-container">
+      <div class="stationname">
+        Stations:
+      </div>
+      <div id="card-container" class="stationsize">
         <div class="route-card">
-          <h2>1) Apolis</h2>
+          <h2>------> Apolis</h2>
+          <h1>Travel Time: 1:32</h1>
         </div>
         <div class="route-card">
-          <h2>1) Anaheim</h2>
+          <h2>------> Anaheim</h2>
+          <h1>Travel Time: 1:32</h1>
         </div>
         <div class="route-card">
-          <h2>1) Winterholm</h2>
+          <h2>------> Winterholm</h2>
+          <h1>Travel Time: 1:32</h1>
         </div>
       </div>
     </section>
@@ -63,15 +69,21 @@
       <div class="route-number">
         Route #2
       </div>
-      <div id="card-container">
+      <div class="stationname">
+        Stations:
+      </div>
+      <div id="card-container" class="stationsize">
         <div class="route-card">
-          <h2>1) Anaheim</h2>
+          <h2>------> Anaheim</h2>
+          <h1>Travel Time: 1:32</h1>
         </div>
         <div class="route-card">
-          <h2>1) Marksville</h2>
+          <h2>------> Marksville</h2>
+          <h1>Travel Time: 1:32</h1>
         </div>
         <div class="route-card">
-          <h2>1) Winterholm</h2>
+          <h2>------> Winterholm</h2>
+          <h1>Travel Time: 1:32</h1>
         </div>
       </div>
     </section>
@@ -80,15 +92,21 @@
       <div class="route-number">
         Route #3
       </div>
-      <div id="card-container">
+      <div class="stationname">
+        Stations:
+      </div>
+      <div id="card-container" class="stationsize">
         <div class="route-card">
-          <h2>1) Acletta</h2>
+          <h2>------> Acletta</h2>
+          <h1>Travel Time: 1:32</h1>
         </div>
         <div class="route-card">
-          <h2>1) Tailum</h2>
+          <h2>------> Tailum</h2>
+          <h1>Travel Time: 1:32</h1>
         </div>
         <div class="route-card">
-          <h2>1) Kaiser</h2>
+          <h2>------> Kaiser</h2>
+          <h1>Travel Time: 1:32</h1>
         </div>
       </div>
     </section>
@@ -103,7 +121,7 @@
         <label>Route Name</label>
         <input type="text" id="route-name">
       </div>
-      <button class="button" id="submit-station">Submit</button>
+      <button onclick="insertroute(); return false;" class="button" id="submit-route">Submit</button>
     </form>
 
     <form class="insert">
@@ -128,7 +146,7 @@
           <option value="04">Station 4</option>
         </select>
       </div>
-      <button class="button" id="submit-station">Submit</button>
+      <button onclick="insertstationroute(); return false;" class="button" id="submit-station-route">Submit</button>
     </form>
 
 
