Added search filer for states in stations.

--- a/route.html
+++ b/route.html
@@ -50,17 +50,17 @@
         Stations:
       </div>
       <div id="card-container" class="stationsize">
-        <div class="route-card">
+        <div class="route-card noborder">
           <h2>------> Apolis</h2>
-          <h1>Travel Time: 1:32</h1>
+          <h1>Travel Time: 9:56</h1>
         </div>
-        <div class="route-card">
+        <div class="route-card noborder">
           <h2>------> Anaheim</h2>
-          <h1>Travel Time: 1:32</h1>
+          <h1>Travel Time: 6:48</h1>
         </div>
-        <div class="route-card">
+        <div class="route-card noborder">
           <h2>------> Winterholm</h2>
-          <h1>Travel Time: 1:32</h1>
+          <h1>Travel Time: 1:23</h1>
         </div>
       </div>
     </section>
@@ -73,17 +73,17 @@
         Stations:
       </div>
       <div id="card-container" class="stationsize">
-        <div class="route-card">
+        <div class="route-card noborder">
           <h2>------> Anaheim</h2>
           <h1>Travel Time: 1:32</h1>
         </div>
-        <div class="route-card">
+        <div class="route-card noborder">
           <h2>------> Marksville</h2>
-          <h1>Travel Time: 1:32</h1>
+          <h1>Travel Time: 5:31</h1>
         </div>
-        <div class="route-card">
+        <div class="route-card noborder">
           <h2>------> Winterholm</h2>
-          <h1>Travel Time: 1:32</h1>
+          <h1>Travel Time: 1:23</h1>
         </div>
       </div>
     </section>
@@ -96,17 +96,21 @@
         Stations:
       </div>
       <div id="card-container" class="stationsize">
-        <div class="route-card">
+        <div class="route-card noborder">
           <h2>------> Acletta</h2>
-          <h1>Travel Time: 1:32</h1>
+          <h1>Travel Time: 1:21</h1>
         </div>
-        <div class="route-card">
+        <div class="route-card noborder">
           <h2>------> Tailum</h2>
-          <h1>Travel Time: 1:32</h1>
+          <h1>Travel Time: 4:42</h1>
         </div>
-        <div class="route-card">
+        <div class="route-card noborder">
           <h2>------> Kaiser</h2>
-          <h1>Travel Time: 1:32</h1>
+          <h1>Travel Time: 3:32</h1>
+        </div>
+        <div class="route-card noborder">
+          <h2>------> Salem</h2>
+          <h1>Travel Time: 1:42</h1>
         </div>
       </div>
     </section>
