--- a/station.html
+++ b/station.html
@@ -5,6 +5,7 @@
     <title>AnyTrak</title>
     <link href="https://fonts.googleapis.com/css?family=Quicksand&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
+    <script src="index.js"></script>
   </head>
   <body>
     <nav class="header">
@@ -35,7 +36,7 @@
 
     <div class="title-header">
       <h4 class="title-name">Stations</h4>
-      <button onclick="showmodal()" class="addbutton">Add Station</button>
+      <button onclick="showmodal()" class="addbutton">Add Stations</button>
     </div>
 
     <div id="search-container">
@@ -139,6 +140,6 @@
       </div>
       <button onclick="insertstation(); return false;" class="button" id="submit-station">Submit</button>
     </form>
-    <script src="index.js"></script>
+    <script src="station.js"></script>
   </body>
 </html>
