fixed the styling of the nav-bar

--- a/home.html
+++ b/home.html
@@ -1,18 +1,40 @@
 <!DOCTYPE html>
 <html>
+
+
   <head>
     <meta charset="utf-8">
     <title>AnyTrak</title>
     <link href="https://fonts.googleapis.com/css?family=Quicksand&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
   </head>
+
   <body>
+    <div class="topnav">
+      <a class="active" style = "font-size: 25px;">AnyTrak</a>
+
+      <div class="topnav-right">
+        <a href="home.html">Home</a>
+        <a href="train.html">Trains</a>
+        <a href="station.html">Stations</a>
+        <a href="route.html">Routes</a>
+      </div>
+    </div>
+  
+  </body>
+
+  <!-- <body>
     <nav class="header">
 
       <div class="title">
         <h3>AnyTrak</h3>
       </div>
-      <ul class="nav-elements">
+      <div class="nav-elements">
+        
+        <div class = "title" > 
+          <h3>AnyTrak</h3> 
+        </div>
+ 
         <li>
           <a href="home.html">Home</a>
         </li>
@@ -31,8 +53,9 @@
           <div class="l3"></div>
         </div>
 
-      </ul>
-    </nav>
+      </div>
+    </nav> -->
+    
     <div class="title-header">
       <h4>Welcome! Learn more about Us!</h4>
     </div>
