--- a/station.html
+++ b/station.html
@@ -8,7 +8,19 @@
     <script src="index.js"></script>
   </head>
   <body>
-    <nav class="header">
+
+    <div class="topnav">
+      <a class="active" style="font-size: 25px;">AnyTrak</a>
+  
+      <div class="topnav-right">
+        <a href="home.html">Home</a>
+        <a href="train.html">Trains</a>
+        <a href="station.html">Stations</a>
+        <a href="route.html">Routes</a>
+      </div>
+    </div>
+      
+    <!-- <nav class="header">
 
       <div class="title">
         <h3>AnyTrak</h3>
@@ -32,7 +44,7 @@
           <div class="l3"></div>
         </div>
       </ul>
-    </nav>
+    </nav> -->
 
     <div class="title-header">
       <h4 class="title-name">Stations</h4>
