added button styles

--- a/route.html
+++ b/route.html
@@ -49,7 +49,9 @@
 
     <div class="title-header">
       <h4 class="title-name">Routes</h4>
-      <button onclick="showmodal()" class="addbutton">Add Routes w/ Stations</button>
+      <div class="buttons">
+        <button onclick="showmodal()" class="butt">Add Routes</button>
+      </div>
     </div>
 
     <main id="route-container">
