--- a/station.html
+++ b/station.html
@@ -48,7 +48,9 @@
 
     <div class="title-header">
       <h4 class="title-name">Stations</h4>
-      <button onclick="showmodal()" class="addbutton">Add Stations</button>
+      <div class="buttons">
+        <button onclick="showmodal()" class="butt">Add Stations</button>
+      </div>
     </div>
 
     <div id="search-container">
