--- a/train.html
+++ b/train.html
@@ -30,7 +30,7 @@
     </div>
 
     <main id="card-container">
-      <div class="row">
+      <div id="row">
         
         <div class="col">
           <section class="card">
