--- a/route.html
+++ b/route.html
@@ -54,80 +54,92 @@
       </div>
     </div>
 
-    <main id="route-container">
+    <main id="card-container">
+    <div class="row">
+      <div class="col">
+        <section class="card">
+          <span class="close">x</span>
+          <div class="route-number">
+            Route #1 
+          </div>
+          <div class="stationname">
+            Stations:
+          </div>
+          <div id="card-container" class="stationsize">
+            <div class="route-card noborder">
+              <h2>------> Apolis</h2>
+              <h1>Travel Time:</h1>
+            </div>
+            <div class="route-card noborder">
+              <h2>------> Anaheim</h2>
+              <h1>Travel Time: 6:48</h1>
+            </div>
+            <div class="route-card noborder">
+              <h2>------> Winterholm</h2>
+              <h1>Travel Time: 1:23</h1>
+            </div>
+          </div>
+        </section>
+      </div>
 
-    <section class="route-card">
-      <div class="route-number">
-        Route #1
+      <div class="col">
+        <section class="card">
+          <span class="close">x</span>
+          <div class="route-number">
+            Route #2 
+          </div>
+          <div class="stationname">
+            Stations:
+          </div>
+          <div id="card-container" class="stationsize">
+            <div class="route-card noborder">
+              <h2>------> Anaheim</h2>
+              <h1>Travel Time:</h1>
+            </div>
+            <div class="route-card noborder">
+              <h2>------> Marksville</h2>
+              <h1>Travel Time: 5:31</h1>
+            </div>
+            <div class="route-card noborder">
+              <h2>------> Winterholm</h2>
+              <h1>Travel Time: 1:23</h1>
+            </div>
+          </div>
+        </section>
       </div>
-      <div class="stationname">
-        Stations:
-      </div>
-      <div id="card-container" class="stationsize">
-        <div class="route-card noborder">
-          <h2>------> Apolis</h2>
-          <h1>Travel Time:</h1>
-        </div>
-        <div class="route-card noborder">
-          <h2>------> Anaheim</h2>
-          <h1>Travel Time: 6:48</h1>
-        </div>
-        <div class="route-card noborder">
-          <h2>------> Winterholm</h2>
-          <h1>Travel Time: 1:23</h1>
-        </div>
-      </div>
-    </section>
+      <div class="col">
 
-    <section class="route-card">
-      <div class="route-number">
-        Route #2
+        <section class="card">
+          <span class="close">x</span>
+          <div class="route-number">
+            Route #3 
+          </div>
+          <div class="stationname">
+            Stations:
+          </div>
+          <div id="card-container" class="stationsize">
+            <div class="route-card noborder">
+              <h2>------> Acletta</h2>
+              <h1>Travel Time:</h1>
+            </div>
+            <div class="route-card noborder">
+              <h2>------> Tailum</h2>
+              <h1>Travel Time: 4:42</h1>
+            </div>
+            <div class="route-card noborder">
+              <h2>------> Kaiser</h2>
+              <h1>Travel Time: 3:32</h1>
+            </div>
+            <div class="route-card noborder">
+              <h2>------> Salem</h2>
+              <h1>Travel Time: 1:42</h1>
+            </div>
+          </div>
+        </section>
+      
       </div>
-      <div class="stationname">
-        Stations:
-      </div>
-      <div id="card-container" class="stationsize">
-        <div class="route-card noborder">
-          <h2>------> Anaheim</h2>
-          <h1>Travel Time:</h1>
-        </div>
-        <div class="route-card noborder">
-          <h2>------> Marksville</h2>
-          <h1>Travel Time: 5:31</h1>
-        </div>
-        <div class="route-card noborder">
-          <h2>------> Winterholm</h2>
-          <h1>Travel Time: 1:23</h1>
-        </div>
-      </div>
-    </section>
 
-    <section class="route-card">
-      <div class="route-number">
-        Route #3
-      </div>
-      <div class="stationname">
-        Stations:
-      </div>
-      <div id="card-container" class="stationsize">
-        <div class="route-card noborder">
-          <h2>------> Acletta</h2>
-          <h1>Travel Time:</h1>
-        </div>
-        <div class="route-card noborder">
-          <h2>------> Tailum</h2>
-          <h1>Travel Time: 4:42</h1>
-        </div>
-        <div class="route-card noborder">
-          <h2>------> Kaiser</h2>
-          <h1>Travel Time: 3:32</h1>
-        </div>
-        <div class="route-card noborder">
-          <h2>------> Salem</h2>
-          <h1>Travel Time: 1:42</h1>
-        </div>
-      </div>
-    </section>
+    </div>
 
     </main>
 
@@ -167,5 +179,16 @@
       <button onclick="insertstationroute(); return false;" class="button" id="submit-station-route">Submit</button>
     </form>
 
+
+    <script>
+      var closebtns = document.getElementsByClassName("close");
+      var i;
+
+      for (i = 0; i < closebtns.length; i++) {
+        closebtns[i].addEventListener("click", function () {
+          this.parentElement.style.display = 'none';
+        });
+      }
+    </script>
   </body>
 </html>
